Revision history for Plack-Middleware-Statsd

{{$NEXT}}

v0.2.0    2018-02-01 17:21:29+00:00 Europe/London
  [Enhancements]
  - Allow the X-Sendfile header variation to be configured.

  [Documentation]
  - Updated information on logging content types.

  - Added missing psgi.request.content-type metric.

  - Fixed POD markup.

v0.1.1    2018-02-01 14:21:29+00:00 Europe/London
  [Bug Fixes]
  - Removed charset from content-type metrics.

  - Explicitly added Plack middleware prerequisites for tests.

  [Documentation]
  - Fixed POD markup.

  - Documented additional metrics.

  [Other Changes]
  - Removed unnecessary testing prerequisites.

v0.1.0    2018-01-31 18:13:40+00:00 Europe/London
  - Initial release.